# ChangeLog for www-servers/resin
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/resin/ChangeLog,v 1.17 2006/09/11 22:18:44 nelchael Exp $

  11 Sep 2006; Krzysiek Pawlik <nelchael@gentoo.org> metadata.xml:
  Updated metadata.xml to list me as primary maintainer.

  11 Sep 2006; Krzysiek Pawlik <nelchael@gentoo.org> resin-3.0.21.ebuild:
  Added source USE flag.

*resin-3.0.21 (14 Aug 2006)

  14 Aug 2006; Krzysiek Pawlik <nelchael@gentoo.org> -files/3.0.12/21resin,
  -files/3.0.12/gentoo.diff, -files/3.0.12/resin.conf,
  -files/3.0.12/resin.init, -files/3.0.12/wrapper.pl.diff,
  -files/3.0.19/resin-3.0.19-gentoo.patch, -files/3.0.19/resin.conf,
  -files/3.0.19/resin.init, -files/3.0.20/resin-3.0.20-gentoo.patch,
  -files/3.0.20/resin.conf, -files/3.0.20/resin.init,
  +files/3.0.21/resin-3.0.21-gentoo.patch, +files/3.0.21/resin.conf,
  +files/3.0.21/resin.init, -resin-3.0.12.ebuild, -resin-3.0.19.ebuild,
  -resin-3.0.20.ebuild, +resin-3.0.21.ebuild:
  Version bump, cleaned up old versions.

  02 Aug 2006; Krzysiek Pawlik <nelchael@gentoo.org> resin-3.0.20.ebuild:
  Fixed DEPEND on dev-java/sun-jaf-bin.

*resin-3.0.20 (02 Aug 2006)

  02 Aug 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/3.0.20/resin.conf, +files/3.0.20/resin-3.0.20-gentoo.patch,
  +files/3.0.20/resin.init, +resin-3.0.20.ebuild:
  Version bump.

*resin-2.1.17 (29 Jul 2006)

  29 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> +files/2.1.17/21resin,
  +files/2.1.17/resin.conf, +files/2.1.17/resin.diff,
  +files/2.1.17/resin.init, +resin-2.1.17.ebuild:
  Version bump of 2.1 series.

  23 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> resin-3.0.19.ebuild:
  Added ~ppc, bug #139779

  20 Jul 2006; Markus Rothe <corsair@gentoo.org> resin-3.0.19.ebuild:
  Added ~ppc64; bug #139779

*resin-3.0.19 (01 Jul 2006)

  01 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>