@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/resin
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/resin/ChangeLog,v 1.17 2006/09/11 22:18:44 nelchael Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/resin/ChangeLog,v 1.18 2006/09/24 19:28:08 nelchael Exp $
+
+  24 Sep 2006; Krzysiek Pawlik <nelchael@gentoo.org> resin-3.0.21.ebuild:
+  Update DEPEND to use new sun-jaf and sun-javamail.
 
   11 Sep 2006; Krzysiek Pawlik <nelchael@gentoo.org> metadata.xml:
   Updated metadata.xml to list me as primary maintainer.
